--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
-body{
-  width: 90%;
-  height: 90%;
-  margin: auto 0;
-
-  background-size: cover;
+body {
+    width: 90%;
+    height: 90%;
+    margin: auto 0;
+    background-size: cover;
 }
-canvas{
-  margin: 0 auto;
-   background-image: url('images/maze.jpg');
-   width: 758px;
-   height: 751px;
+
+canvas {
+
+    margin: 0 auto;
+    background-image: url('images/maze.jpg');
+    width: 758px;
+    height: 751px;
+}
+div{
+  text-align: center;
+  margin: 50px;
+}
+h1{
+  text-align: center;
+  font-family: 'lobster';
+  font-size: 45px;
 }
 
