--- a/style.css
+++ b/style.css
@@ -2,23 +2,28 @@ body {
     width: 90%;
     height: 90%;
     margin: auto 0;
+    background-image: url('images/stacker.gif');
     background-size: cover;
 }
 
-canvas {
-
-    margin: 0 auto;
-    background-image: url('images/maze.jpg');
-    width: 758px;
-    height: 751px;
+h1 {
+    text-align: center;
+    font-family: 'lobster';
+    font-size: 45px;
 }
-div{
-  text-align: center;
-  margin: 50px;
+#platform{
+  margin-left: 100px;
+  position: absolute;
+  bottom: 0;
+  width: 80%;
+  height: 50px;
+  background-color: black;
 }
-h1{
-  text-align: center;
-  font-family: 'lobster';
-  font-size: 45px;
+#static-stacker{
+  width: 300px;
+  height: 50px;
+  background-color: pink;
+  position: absolute;
+  bottom: 6.5%;
+  margin-left: 350px;
 }
-
