--- a/style.css
+++ b/style.css
@@ -11,19 +11,22 @@ h1 {
     font-family: 'lobster';
     font-size: 45px;
 }
-#platform{
-  margin-left: 100px;
-  position: absolute;
-  bottom: 0;
-  width: 80%;
-  height: 50px;
-  background-color: black;
+
+#platform {
+    margin-left: 100px;
+    position: absolute;
+    bottom: 0;
+    width: 80%;
+    height: 50px;
+    background-color: black;
 }
-#static-stacker{
-  width: 300px;
-  height: 50px;
-  background-color: pink;
-  position: absolute;
-  bottom: 6.5%;
-  margin-left: 350px;
+
+#stacker {
+    width: 300px;
+    height: 50px;
+    background-color: pink;
+    position: absolute;
+    bottom: 6.5%;
+    margin-left: 350px;
+    display: none;
 }
