--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 body {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     margin: auto 0;
     background-image: url('images/stacker.gif');
     background-size: cover;
+}
+
+header {
+    background-color: gray;
+    width: 100%;
+    opacity: 0.8;
 }
 
 h1 {
@@ -19,6 +25,12 @@ h1 {
     width: 800px;
     height: 50px;
     background-color: black;
+    border-radius: 7px;
+    opacity: 0.9;
+}
+
+.holdbox {
+    height: 600px;
 }
 
 .stacker {
@@ -27,7 +39,9 @@ h1 {
     background-color: pink;
     position: absolute;
     bottom: 6.5%;
-    margin-left: 400px;
+    margin-left: 230px;
+    border: 1px solid red;
+    border-radius: 7px;
     /*    visibility: hidden;
 */
 }
@@ -36,100 +50,130 @@ h1 {
     width: 300px;
     height: 50px;
     background-color: red;
+    border: 1px solid pink;
     position: absolute;
     bottom: 13.4%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester1 {
     width: 300px;
     height: 50px;
     background-color: pink;
+    border: 1px solid red;
     position: absolute;
     bottom: 20.2%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester2 {
     width: 300px;
     height: 50px;
     background-color: red;
+    border: 1px solid pink;
     position: absolute;
     bottom: 27%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester3 {
     width: 300px;
     height: 50px;
     background-color: pink;
+    border: 1px solid red;
     position: absolute;
     bottom: 33.8%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester4 {
     width: 300px;
     height: 50px;
     background-color: red;
+    border: 1px solid pink;
     position: absolute;
     bottom: 40.6%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester5 {
     width: 300px;
     height: 50px;
     background-color: pink;
+    border: 1px solid red;
     position: absolute;
     bottom: 47.4%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester6 {
     width: 300px;
     height: 50px;
     background-color: red;
+    border: 1px solid pink;
     position: absolute;
     bottom: 54.2%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester7 {
     width: 300px;
     height: 50px;
     background-color: pink;
+    border: 1px solid red;
     position: absolute;
     bottom: 61.1%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester8 {
     width: 300px;
     height: 50px;
     background-color: red;
+    border: 1px solid pink;
     position: absolute;
     bottom: 67.9%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester9 {
     width: 300px;
     height: 50px;
     background-color: pink;
+    border: 1px solid red;
     position: absolute;
     bottom: 74.7%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
 
 .tester10 {
     width: 300px;
     height: 50px;
     background-color: red;
+    border: 1px solid pink;
     position: absolute;
     bottom: 81.5%;
-    margin-left: 330px;
+    margin-left: 230px;
+    border-radius: 7px;
+    visibility: hidden;
 }
-@-webkit-keyframes backandforth {0%{left:0;} 50%{left:100%;} 100%{left:0;}}
-
-@keyframes backandforth {0%{left:0;} 50%{left:100%;} 100%{left:0;}}
