--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ h1 {
     font-family: 'lobster';
     font-size: 45px;
 }
+a{
+  text-decoration: none;
+  color: black;
+}
 
 #platform {
     margin-left: 100px;
