--- a/style2.css
+++ b/style2.css
@@ -21,6 +21,7 @@ h1 {
 fieldset {
     text-align: center;
     border: none;
+
 }
 
 .one {
@@ -39,4 +40,10 @@ fieldset {
 .check {
     margin-right: 25px;
     font-weight: bolder;
+}
+.bgc{
+    background-color: rgba(128,128,128, 0.9);
+    width: 400px;
+    margin: 0 auto;
+
 }
