--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ a {
     text-decoration: none;
     color: black;
 }
+p{
+  color: white;
+  font-family: 'lobster';
+  text-align: center;
+  font-size: 20px;
+}
 
 #platform {
     width: 100%;
@@ -31,6 +37,7 @@ a {
     opacity: 0.9;
     bottom: 0;
     position: absolute;
+
 }
 
 .holdbox {
@@ -60,7 +67,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 13.4%;
-    margin: 0 auto;
+    margin: 0.1 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -72,7 +79,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 20.2%;
-    margin: 0 auto;
+    margin: 0.2 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -84,7 +91,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 27%;
-    margin: 0 auto;
+    margin: 0.3 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -96,7 +103,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 33.8%;
-    margin: 0 auto;
+    margin: 0.4 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -108,7 +115,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 40.6%;
-    margin: 0 auto;
+    margin: 0.5 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -120,7 +127,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 47.4%;
-    margin: 0 auto;
+    margin: 0.6 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -132,7 +139,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 54.2%;
-    margin: 0 auto;
+    margin: 0.7 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -144,7 +151,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 61.1%;
-    margin: 0 auto;
+    margin: 0.8 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -156,7 +163,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 67.9%;
-    margin: 0 auto;
+    margin: 0.9 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -168,7 +175,7 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 74.7%;
-    margin: 0 auto;
+    margin: 1 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -179,10 +186,181 @@ a {
     border: 1px solid black;
     position: absolute;
     bottom: 81.5%;
+    margin: 1.1 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+.box p {
+    font-size: 20px;
+    display: inline-block;
+    color: black;
+    padding: 10px;
+    display: none;
+}
+button{
+border-radius: 10px;
+padding: 5px;
+font-size: 10px;
+font-weight: bolder;
+}
+button:hover{
+border-radius: 15px;
+padding: 5px;
+color: white;
+background-color: black;
+}
+.colorsAF{
+background-color: blue;
+}
+.colorsFT{
+background-color: purple;
+}
+
+
+@media only screen and (max-width: 768px) {
+.stacker {
+    width: 200px;
+    height: 50px;
+    background-color: pink;
+    position: absolute;
+    bottom: 6.5%;
+    margin: 0 auto;
+    border: 1px solid black;
+    border-radius: 7px;
+   /*     visibility: hidden;
+*/
+}
+
+
+
+.tester1 {
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 13.4%;
     margin: 0 auto;
     border-radius: 7px;
     visibility: hidden;
 }
-@media only screen and (max-width: 1035px) {
 
+.tester2 {
+    width: 200px;
+    height: 50px;
+    background-color: pink;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 20.2%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+
+.tester3 {
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 27%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+
+.tester4 {
+    width: 200px;
+    height: 50px;
+    background-color: pink;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 33.8%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+
+.tester5 {
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 40.6%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+
+.tester6 {
+    width: 200px;
+    height: 50px;
+    background-color: pink;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 47.4%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+
+.tester7 {
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 54.2%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+
+.tester8 {
+    width: 200px;
+    height: 50px;
+    background-color: pink;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 61.1%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+
+.tester9 {
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 67.9%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+
+.tester10 {
+    width: 200px;
+    height: 50px;
+    background-color: pink;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 74.7%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+.tester11 {
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 81.5%;
+    margin: 0 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
 }
