--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p{
     margin: 0 auto;
 }
 
-.stacker {
+/*.stacker {
     width: 300px;
     height: 50px;
     background-color: pink;
@@ -55,8 +55,9 @@ p{
     border: 1px solid black;
     border-radius: 7px;
    /*     visibility: hidden;
+   }
 */
-}
+
 
 
 
@@ -66,7 +67,7 @@ p{
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 13.4%;
+    bottom: 6.5%;
     margin: 0.1 auto;
     border-radius: 7px;
     visibility: hidden;
@@ -78,7 +79,7 @@ p{
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 20.2%;
+    bottom: 13.4%;
     margin: 0.2 auto;
     border-radius: 7px;
     visibility: hidden;
@@ -90,7 +91,7 @@ p{
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 27%;
+    bottom: 20.2%;
     margin: 0.3 auto;
     border-radius: 7px;
     visibility: hidden;
@@ -102,7 +103,7 @@ p{
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 33.8%;
+    bottom: 27%;
     margin: 0.4 auto;
     border-radius: 7px;
     visibility: hidden;
@@ -114,7 +115,7 @@ p{
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 40.6%;
+    bottom: 33.8%;
     margin: 0.5 auto;
     border-radius: 7px;
     visibility: hidden;
@@ -126,7 +127,7 @@ p{
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 47.4%;
+    bottom: 40.6%;
     margin: 0.6 auto;
     border-radius: 7px;
     visibility: hidden;
@@ -138,7 +139,7 @@ p{
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 54.2%;
+    bottom: 47.4%;
     margin: 0.7 auto;
     border-radius: 7px;
     visibility: hidden;
@@ -150,7 +151,7 @@ p{
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 61.1%;
+    bottom: 54.2%;
     margin: 0.8 auto;
     border-radius: 7px;
     visibility: hidden;
@@ -162,7 +163,7 @@ p{
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 67.9%;
+    bottom: 61.1%;
     margin: 0.9 auto;
     border-radius: 7px;
     visibility: hidden;
@@ -174,12 +175,23 @@ p{
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 74.7%;
+    bottom: 67.9%;
     margin: 1 auto;
     border-radius: 7px;
     visibility: hidden;
 }
 .tester11 {
+    width: 300px;
+    height: 50px;
+    background-color: red;
+    border: 1px solid black;
+    position: absolute;
+    bottom: 74.7%;
+    margin: 1.1 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+.tester12 {
     width: 300px;
     height: 50px;
     background-color: red;
@@ -218,29 +230,14 @@ background-color: purple;
 
 
 @media only screen and (max-width: 768px) {
-.stacker {
-    width: 200px;
-    height: 50px;
-    background-color: pink;
-    position: absolute;
-    bottom: 6.5%;
-    margin: 0 auto;
-    border: 1px solid black;
-    border-radius: 7px;
-   /*     visibility: hidden;
-*/
-}
-
-
-
 .tester1 {
     width: 200px;
     height: 50px;
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 13.4%;
-    margin: 0 auto;
+    bottom: 6.5%;
+    margin: 0.1 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -251,8 +248,8 @@ background-color: purple;
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 20.2%;
-    margin: 0 auto;
+    bottom: 13.4%;
+    margin: 0.2 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -263,8 +260,8 @@ background-color: purple;
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 27%;
-    margin: 0 auto;
+    bottom: 20.2%;
+    margin: 0.3 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -275,8 +272,8 @@ background-color: purple;
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 33.8%;
-    margin: 0 auto;
+    bottom: 27%;
+    margin: 0.4 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -287,8 +284,8 @@ background-color: purple;
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 40.6%;
-    margin: 0 auto;
+    bottom: 33.8%;
+    margin: 0.5 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -299,8 +296,8 @@ background-color: purple;
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 47.4%;
-    margin: 0 auto;
+    bottom: 40.6%;
+    margin: 0.6 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -311,8 +308,8 @@ background-color: purple;
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 54.2%;
-    margin: 0 auto;
+    bottom: 47.4%;
+    margin: 0.7 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -323,8 +320,8 @@ background-color: purple;
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 61.1%;
-    margin: 0 auto;
+    bottom: 54.2%;
+    margin: 0.8 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -335,8 +332,8 @@ background-color: purple;
     background-color: red;
     border: 1px solid black;
     position: absolute;
-    bottom: 67.9%;
-    margin: 0 auto;
+    bottom: 61.1%;
+    margin: 0.9 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -347,8 +344,8 @@ background-color: purple;
     background-color: pink;
     border: 1px solid black;
     position: absolute;
-    bottom: 74.7%;
-    margin: 0 auto;
+    bottom: 67.9%;
+    margin: 1 auto;
     border-radius: 7px;
     visibility: hidden;
 }
@@ -358,8 +355,19 @@ background-color: purple;
     background-color: red;
     border: 1px solid black;
     position: absolute;
+    bottom: 74.7%;
+    margin: 1.1 auto;
+    border-radius: 7px;
+    visibility: hidden;
+}
+.tester12 {
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    border: 1px solid black;
+    position: absolute;
     bottom: 81.5%;
-    margin: 0 auto;
+    margin: 1.1 auto;
     border-radius: 7px;
     visibility: hidden;
 }
